fix: sonarqube warnings